--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h1>Registration Form</h1>
             </div>
             <div>
-                <form action="">
+                <form action="login.html">
                     <table cellspacing="2" align="center" cellpadding="8" border="0">
                         <tr>
                             <td align="right">Enter Name :</td>
@@ -124,7 +124,7 @@
                             <tr>
                                 <td>
                                     <button>Reset</button>
-                                    <button><a href="login.html">submit</a></button>
+                                    <button>submit</button>
                                 </td>
                             </tr>
                         </tr>
